# dbrx-catnat

./: .env.example  .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
SPECS/: PHASE_0_RETROSPECTIVE.md  SPEC.md
notebooks/_setup/: 00_create_catalog.sql
notebooks/bronze/: 10_rga_susceptibility.sql  20_ppri_communes.sql  30_tri_flood.sql
notebooks/gold/: 10_rga_h3.sql  20_ppri_communes_h3.sql  30_tri_flood_h3.sql  40_ign_communes_h3.sql  50_portfolio_policies_h3.sql
notebooks/queries/: 01_communes_in_ppri.sql  02_triple_peril_overlap.sql  03_rga_fort_pct_per_commune.sql  04_tri_scenario_intensity_grid.sql  05_population_under_flood_by_dept.sql  06_portfolio_rga_exposure.sql
notebooks/silver/: 10_rga_susceptibility.sql  20_ppri_communes.sql  30_tri_flood.sql  40_ign_communes.sql  50_portfolio_policies.sql  51_portfolio_events.sql
resources/: jobs.yml
scripts/: fetch_rga.sh
src/catnat/: __init__.py  cli.py  config.py  duck.py  jobs.py  sql.py
src/catnat/fetch/: base.py  ppri.py  rga.py  tri.py
tests/: conftest.py  test_duck_translate.py  test_gold_ign_duckdb.py  test_gold_ppri_duckdb.py  test_gold_rga_duckdb.py  test_gold_tri_duckdb.py  test_silver_ign_duckdb.py  test_silver_portfolio_duckdb.py  test_silver_ppri_duckdb.py  test_silver_rga_duckdb.py  test_silver_tri_duckdb.py  test_sql.py
