[project]
name = "catnat"
version = "0.1.0"
description = "GeoCatNat — CatNat geospatial demo on Databricks. Bronze/silver/gold pipeline and orchestration helpers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Lucas Bruand", email = "lucas.bruand@databricks.com" }]

dependencies = [
    "databricks-sdk>=0.40",
    "typer>=0.15",
    "pyogrio>=0.10",
    "geopandas>=1.0",
    "rich>=13",
]

[project.scripts]
catnat = "catnat.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catnat"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
