[project]
name = "catnat"
version = "0.1.0"
description = "GeoCatNat — CatNat geospatial demo on Databricks. Bronze/silver/gold pipeline and orchestration helpers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Lucas Bruand", email = "lucas.bruand@databricks.com" }]

dependencies = [
    "databricks-sdk>=0.40",
    "typer>=0.15",
    "pyogrio>=0.10",
    "geopandas>=1.0",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.scripts]
catnat = "catnat.cli:app"
# Databricks `python_wheel_task` entry point — wraps app() to swallow the
# clean `SystemExit(0)` that the wheel-task runner otherwise treats as failure.
catnat-job = "catnat.jobs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catnat"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "duckdb>=1.0",
    "sqlglot>=25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic API requires calling Argument()/Option() in defaults;
# B008 ("function call in argument defaults") is the rule that complains.
"src/catnat/cli.py" = ["B008"]
# Test fixtures embed long SQL VALUES literals (WKT polygons, PPRI rows) that
# can't be wrapped without obscuring the data shape. E501 is line-length.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "databricks: tests that require a live Databricks workspace connection (excluded in CI)",
]
addopts = "--strict-markers"
